<resources>
    <string name="app_name">sleeper_frontend</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_scr_edittext_id">아이디</string>
    <string name="login_scr_edittext_password">비밀번호</string>
    <string name="login_scr_btn_login">로그인</string>
    <string name="login_scr_btn_register"><u>회원가입</u></string>

    <string name="logo">Sleeper</string>

    <string name="register_scr_textview_id">아이디</string>
    <string name="register_scr_edittext_id_hint">영문 8~20자</string>
    <string name="register_scr_btn_verification">중복확인</string>
    <string name="register_scr_textview_password">비밀번호</string>
    <string name="register_scr_edittext_password_hint">영문, 숫자, 특수문자 모두 포함 8~20자</string>
    <string name="register_scr_textview_password_verification">비밀번호 확인</string>
    <string name="register_scr_edittext_password_verification_hint">영문, 숫자, 특수문자 모두 포함 8~20자</string>
    <string name="register_scr_textview_username">닉네임</string>
    <string name="register_scr_edittext_username_hint">영문, 숫자, 특수문자 모두 포함 8~20자</string>
    <string name="register_scr_textview_age">나이</string>
    <string name="register_scr_edittext_age_hint">나이 선택</string>
    <string name="register_scr_finish">완료</string>

    <string name="survey_scr_textview_goal_start">목표 수면 시작 시간</string>
    <string name="survey_scr_textview_goal_end">목표 기상 시간</string>
    <string name="survey_scr_btn_choose">시간 선택</string>
    <string name="survey_scr_textview">%1$d:%2$s</string>
    <string name="survey_scr_finish">완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="popup_scr_shop">상점</string>
    <string name="popup_scr_friend">친구</string>

    <string name="home_frg_start_sleep">수면 시작</string>

    <string name="diary_frag_diary">감사 일기</string>
    <string name="diary_frag_hint">오늘은 어떤 좋은 일이 있었나요? :)</string>
    <string name="diary_frag_save">등록</string>

    <string name="home_b_frg_stop_sleep">수면 종료</string>

</resources>