<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activitySurveyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="120dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/MainLogo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/survey_scr_textview_goal_start"
                android:fontFamily="@font/font_the150"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <android.widget.Button
                android:id="@+id/btnSurveyChooseStartTime"
                android:layout_width="65dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:background="@drawable/set_goal_layout_choose_time"
                android:elevation="10dp"
                android:text="@string/survey_scr_btn_choose"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <FrameLayout
            android:layout_width="270dp"
            android:layout_height="83dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/survey_scr_show_goal" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textviewSurveyStartTimeMeridiem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/font_the140"
                    android:textColor="@color/white"
                    android:textSize="27sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textviewSurveyStarTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/font_the140"
                    android:textColor="@color/white"
                    android:textSize="62sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/survey_scr_textview_goal_end"
                android:fontFamily="@font/font_the150"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <android.widget.Button
                android:id="@+id/btnSurveyChooseEndTime"
                android:layout_width="65dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:background="@drawable/set_goal_layout_choose_time"
                android:elevation="10dp"
                android:text="@string/survey_scr_btn_choose"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <FrameLayout
            android:layout_width="270dp"
            android:layout_height="83dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/survey_scr_show_goal" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textviewSurveyEndTimeMeridiem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/font_the140"
                    android:textColor="@color/white"
                    android:textSize="27sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textviewSurveyEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/font_the140"
                    android:textColor="@color/white"
                    android:textSize="62sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <android.widget.Button
        android:id="@+id/btnSurveyFinished"
        android:layout_width="108dp"
        android:layout_height="32dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@drawable/txt_color"
        style="@style/BtnOkayEnabled"/>

</androidx.appcompat.widget.LinearLayoutCompat>